--- a/Final Tutorial.ipynb
+++ b/Final Tutorial.ipynb
@@ -1613,7 +1613,8 @@
     "        print(index)\n",
     "        break\n",
     "    # response_accuracy should either be NaN, correct, miss, or incorrect\n",
-    "    if (not (pd.isna(row['response_accuracy']) or (row['response_accuracy'] == 'correct') or (row['response_accuracy'] == 'miss') or (row['response_accuracy'] == 'incorrect'))):\n",
+    "    if (not (pd.isna(row['response_accuracy']) or (row['response_accuracy'] == 'correct') or (row['response_accuracy'] == 'miss') or \n",
+    "             (row['response_accuracy'] == 'incorrect'))):\n",
     "        print('response_accuracy')\n",
     "        print(index)\n",
     "        break\n",
